# volcengine-audio

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: tests.yml
doc_sync/volcengine/: 1329505-tts_websocket_bidirectional_v3.md  1354869-stt_streaming_bigmodel.md  1594356-realtime_dialogue.md  1598757-tts_http_chunked_sse_v3.md  1719100-tts_websocket_unidirectional_v3.md  manifest.json
scripts/: sync_volcengine_docs.py
src/volcengine_audio/: __init__.py  protocol.py  realtime.py  stt.py  tts.py
tests/: test_realtime.py  test_stt.py  test_tts.py
